--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -16,3 +16,21 @@ h1, h2, h3 {
 ul, ol, li {
     list-style-type: none;
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #007bff;
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #0056b3;
+}
+
+::-webkit-scrollbar-track {
+    background: #f0f0f0;
+    border-radius: 5px;
+}
